--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,3 +124,20 @@
   background-color: #222;
 }
 
+.logout-btn{
+  position: absolute;
+  bottom: 40px;
+  right: 0px;
+  font-size: 16px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: white;
+  border: none;
+  
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s ease;
+}
